syntax = "proto3";
package ProtoBuf;

message LoginReq {
  string userName = 1;
}

message LoginAck {
    int32 userID = 1;
    string result = 2;
}

message LoginNotify {
    int32 userID = 1;
    string userName = 2;
}

message LogoutNotify {
    int32 userID = 1;
}


message MessageReq {
    string text = 1;
}

message MessageNotify {
    int32 userID = 1;
    string text = 2;
}